fix css bugs on mobile

--- a/src/components/Projects/projects.module.css
+++ b/src/components/Projects/projects.module.css
@@ -1,5 +1,5 @@
 .projects {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     color: var(--dark-grey);
  
@@ -8,7 +8,7 @@
 .projectsdiv {
     background-color: var(--white-bg);
     width: 85vw;
-    height: 90vh;
+    min-height: 90vh;
     margin-left: auto;
     margin-right: auto;
     border-radius: 24px;
@@ -93,7 +93,7 @@
 
 @media screen and (max-width: 900px) {
     .projects {
-        margin: 4vh 0;
+        margin: 10vh 0;
     }
 
     .gridleft {
@@ -102,9 +102,9 @@
     .projectsdiv {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
-        height: 100dvh;
+        min-height: 100dvh;
         margin: 0;
-        padding: 0 2rem;
+        padding: 2rem;
         width: 100vw;
     }
 
@@ -131,6 +131,7 @@
     }
 
     .gridleftbottom {
+        margin-top: 1rem;
         grid-row: 3/4;
         grid-column: 1/2;
     }
